--- a/CFA_PSM/Module 4, All Units/Lesson1_Introduction to Data Analysis with Pandas.ipynb
+++ b/CFA_PSM/Module 4, All Units/Lesson1_Introduction to Data Analysis with Pandas.ipynb
@@ -501,31 +501,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company name</th>\n",
+       "      <th>stock ticker symbol</th>\n",
+       "      <th>price per share [$]</th>\n",
+       "      <th>number of shares</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alphabet</td>\n",
+       "      <td>GOOG</td>\n",
+       "      <td>99</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Netflix</td>\n",
+       "      <td>NFLX</td>\n",
+       "      <td>245</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bank of America</td>\n",
+       "      <td>BOA</td>\n",
+       "      <td>33</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Boeing</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>136</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>142</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      company name stock ticker symbol  price per share [$]  number of shares\n",
+       "0         Alphabet                GOOG                   99                 2\n",
+       "1          Netflix                NFLX                  245                 7\n",
+       "2  Bank of America                 BOA                   33                15\n",
+       "3           Boeing                  BA                  136                30\n",
+       "4            Apple                AAPL                  142                22"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portfolio_df = pd.DataFrame({'company name': ['Alphabet', 'Netflix', 'Bank of America', 'Boeing', 'Apple'],\n",
+    "                             'stock ticker symbol':['GOOG', 'NFLX', 'BOA', 'BA', 'AAPL'],\n",
+    "                             'price per share [$]':[99, 245, 33, 136, 142],\n",
+    "                             'number of shares':[2, 7, 15, 30, 22]})\n",
+    "portfolio_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price per share [$]</th>\n",
+       "      <th>number of shares</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>131.000000</td>\n",
+       "      <td>15.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>77.087612</td>\n",
+       "      <td>11.256109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>136.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>142.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>245.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       price per share [$]  number of shares\n",
+       "count             5.000000          5.000000\n",
+       "mean            131.000000         15.200000\n",
+       "std              77.087612         11.256109\n",
+       "min              33.000000          2.000000\n",
+       "25%              99.000000          7.000000\n",
+       "50%             136.000000         15.000000\n",
+       "75%             142.000000         22.000000\n",
+       "max             245.000000         30.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portfolio_df.describe()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9612"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(portfolio_df[\"price per share [$]\"] * portfolio_df[\"number of shares\"])"
+   ]
   },
   {
    "cell_type": "markdown",
