Temp Check - Last Module4

--- a/CFA_PSM/Module 4, All Units/Lesson6_Get Financial Markets Data.ipynb
+++ b/CFA_PSM/Module 4, All Units/Lesson6_Get Financial Markets Data.ipynb
@@ -1684,27 +1684,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                 Open        High         Low       Close  \\\n",
-      "Date                                                                        \n",
-      "2022-02-22 00:00:00-05:00  162.136728  163.817264  159.355498  161.488113   \n",
-      "2022-02-23 00:00:00-05:00  162.687087  163.286575  156.996879  157.311371   \n",
-      "2022-02-24 00:00:00-05:00  149.950442  160.043453  149.380436  159.935349   \n",
-      "\n",
-      "                              Volume  Dividends  Stock Splits  \n",
-      "Date                                                           \n",
-      "2022-02-22 00:00:00-05:00   91162800        0.0           0.0  \n",
-      "2022-02-23 00:00:00-05:00   90009200        0.0           0.0  \n",
-      "2022-02-24 00:00:00-05:00  141147500        0.0           0.0  \n"
+      "rohil\n"
      ]
     }
    ],
+   "source": [
+    "print(\"rohil\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
